--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
 
 install:
   - pip install mongo-orchestration==0.3.1
+  - pip install https://github.com/mongodb-labs/mongo-connector/archive/master.zip
   - curl -O http://archive.apache.org/dist/lucene/solr/4.9.1/solr-4.9.1.tgz
   - tar -zxf solr-4.9.1.tgz
   - cp mongo_connector/doc_managers/schema.xml solr-4.9.1/example/solr/collection1/conf/
